--- a/TP1/Ejercicios/index3.html
+++ b/TP1/Ejercicios/index3.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="canvas" width="500" height="500" style="border:1px solid #d3d3d3;"></canvas>
+    <canvas id="canvas1" width="500" height="500" style="border:1px solid #d3d3d3;"></canvas>
     <script src="Ejercicio3.js"></script>   
 </body>
 </html>
