Implementada función de carga de imágenes

--- a/Entregable/entregable.html
+++ b/Entregable/entregable.html
@@ -48,8 +48,8 @@
     <div class="modal-container" id="modal-container">
         <div class="modal">
             <h2 class="modal-item">Seleccione Imagen</h2>
-            <input class="modal-item" type="file" name="image" id="newImage" accept=".jpg, .png">
-            <button id='upload-image' class="modal-item">Subir</button>
+            <input class="modal-item" type="file" name="image" id="newImageInput" accept=".jpg, .png">
+            <button id='upload-image' class="modal-item">Listo</button>
         </div>
     </div>
 
