--- a/Entregable/entregable.html
+++ b/Entregable/entregable.html
@@ -27,6 +27,10 @@
                 <i class="fas fa-undo"></i>
             </div>
             
+            <div class="icon" id="downloader">
+                <i class="fas fa-download"></i>    
+            </div>
+
         </div>
 
         <div class="icons-div">
