Filtro sepia y negativo agregados. Agregada función de remover filtros funcionando al 89%

--- a/Entregable/entregable.html
+++ b/Entregable/entregable.html
@@ -44,7 +44,12 @@
                 <input type="range" id="inputRangeEraser" min="1" max="10" value="1">
             </div>
         </div>
-       
+
+        <div class="icons-div" id="sepia-filter">
+            <button>Sepia</button>
+            <button id="negative-filter">Negativo</button>
+            <button id="remove-filter">Remove</button>
+        </div>
     </header>
     <div id="canv">
         <canvas id="canvas" width="1200" height="600" style="border:1px solid black;"></canvas>
