--- a/Entregable/entregable.html
+++ b/Entregable/entregable.html
@@ -45,9 +45,10 @@
             </div>
         </div>
 
-        <div class="icons-div" id="sepia-filter">
-            <button>Sepia</button>
+        <div class="icons-div">
+            <button id="sepia-filter">Sepia</button>
             <button id="negative-filter">Negativo</button>
+            <button id="blur-filter">Blur</button>
             <button id="remove-filter">Remove</button>
         </div>
     </header>
