Filtro binario implementado

--- a/Entregable/entregable.html
+++ b/Entregable/entregable.html
@@ -49,6 +49,7 @@
             <button id="sepia-filter">Sepia</button>
             <button id="negative-filter">Negativo</button>
             <button id="blur-filter">Blur</button>
+            <button id="binary-filter">Binary</button>
             <button id="remove-filter">Remove</button>
         </div>
     </header>
