Funciones de conversión + Filtro Brillo

--- a/Entregable/entregable.html
+++ b/Entregable/entregable.html
@@ -47,10 +47,16 @@
 
         <div class="icons-div">
             <button id="sepia-filter">Sepia</button>
-            <button id="negative-filter">Negativo</button>
+            <button id="negative-filter">Negative</button>
             <button id="blur-filter">Blur</button>
             <button id="binary-filter">Binary</button>
             <button id="remove-filter">Remove</button>
+        </div>
+        <div class="icon" id="downloader">
+            <i class="fas fa-sun"></i>    
+        </div>
+        <div>
+            <input type="range" id="inputRangeBright" min="0" max="0.10" step="0.01" value="0">
         </div>
     </header>
     <div id="canv">
