Filtro Saturación implementado

--- a/Entregable/entregable.html
+++ b/Entregable/entregable.html
@@ -52,11 +52,17 @@
             <button id="binary-filter">Binary</button>
             <button id="remove-filter">Remove</button>
         </div>
-        <div class="icon" id="downloader">
+        <div class="icon">
             <i class="fas fa-sun"></i>    
         </div>
         <div>
             <input type="range" id="inputRangeBright" min="0" max="0.10" step="0.01" value="0">
+        </div>
+        <div class="icon">
+            <i class="fas fa-tachometer-alt"></i>    
+        </div>
+        <div>
+            <input type="range" id="inputRangeSaturation" min="0" max="0.10" step="0.01" value="0">
         </div>
     </header>
     <div id="canv">
