add event listener en index

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -20,7 +20,7 @@
                 <a class="nav-link active" data-bs-toggle="modal" data-bs-target="#my-modal" aria-current="page" href="#" id="new-game">Nuevo Juego</a>
               </li>
               <li class="nav-item restart" >
-                <a class="nav-link" href="#">Restart</a>
+                <a class="nav-link" href="#" id="restart">Restart</a>
               </li>
               <li class="nav-item restart" >
                 <a class="nav-link" href="#">About</a>
@@ -44,7 +44,7 @@
                     <select name="player-one" id="one-color" class="form-select" aria-label="Default select example">
                         <option selected>Elija un color</option>
                         <option value="red">Rojo</option>
-                        <option value="green">Verde</option>
+                        <option value="orange">Naranja</option>
                         <option value="blue">Azul</option>
                     </select>
             
@@ -53,7 +53,7 @@
                         <option selected>Elija un color</option>
                         <option value="black">Negro</option>
                         <option value="yellow">Amarillo</option>
-                        <option value="purple">Violeta</option>
+                        <option value="green">Verde</option>
                     </select>
                     <span>Modo</span>
                     <div class="form-check">
@@ -83,7 +83,7 @@
                     
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary">Guardar</button>
+                    <button type="button" id="save" class="btn btn-primary">Guardar</button>
                 </div>
             </div>
         </div>
