dinamic inputs value taken for game logic

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -60,25 +60,25 @@
                     </select>
                     <span>Modo</span>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="cuatroEnLinea" id="cuatroEnLinea" checked>
+                        <input class="form-check-input" type="radio" name="inLine" id="cuatroEnLinea" checked value="4">
                         <label class="form-check-label" for="cuatroEnLinea">
                           4 en linea
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="seisEnLinea" id="seisEnLinea">
+                        <input class="form-check-input" type="radio" name="inLine" id="seisEnLinea" value="6">
                         <label class="form-check-label" for="seisEnLinea">
                           6 en linea
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="sieteEnLinea" id="sieteEnLinea">
+                        <input class="form-check-input" type="radio" name="inLine" id="sieteEnLinea" value="7">
                         <label class="form-check-label" for="sieteEnLinea">
                           7 en linea
                         </label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="ochoEnLinea" id="ochoEnLinea">
+                        <input class="form-check-input" type="radio" name="inLine" id="ochoEnLinea" value="8">
                         <label class="form-check-label" for="ochoEnLinea">
                           8 en linea
                         </label>
