--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -28,7 +28,12 @@
               <li class="nav-item restart" >
                 <a class="nav-link" href="#">About</a>
               </li>
-              
+              <li class="navbar-brand" id="timer">
+                <span id="timer-title">TIME LEFT</span>
+                <span id="minute-timer">5</span>
+                <span>:</span>
+                <span id="second-timer">0</span>
+              </li>
             </ul>
           </div>
         </div>
@@ -91,10 +96,10 @@
             </div>
         </div>
     </div>
-    <div id="canvas-container">
+   
       <canvas>
       </canvas>
-    </div>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
 </body>
 </html>
