fix winner message

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -104,7 +104,7 @@
       <div class="modal-dialog">
           <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="winner">GANO EL JUGADOR </h5>
+                <h5 class="modal-title" id="winner"></h5>
               </div>
               <div class="modal-body">
                 <span>El juego ha terminado</span>
