new funtionality added when game finished

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -108,6 +108,19 @@
               </div>
               <div class="modal-body">
                 <span>El juego ha terminado</span>
+                <span>Desea volver a jugar?</span>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="again" checked value="1">
+                  <label class="form-check-label" for="again">
+                    Si
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="again" checked value="0">
+                  <label class="form-check-label" for="again">
+                  No
+                  </label>
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="close" data-bs-dismiss="modal"> Cerrar</button>
