basic game layout was added

--- a/Entregable2/index.html
+++ b/Entregable2/index.html
@@ -46,6 +46,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
+                  
                     <h5 class="modal-title">Nuevo Juego</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
@@ -108,7 +109,7 @@
               </div>
               <div class="modal-body">
                 <span>El juego ha terminado</span>
-                <span>Desea volver a jugar?</span>
+                <span>¿Desea volver a jugar?</span>
                 <div class="form-check">
                   <input class="form-check-input" type="radio" name="again" checked value="1">
                   <label class="form-check-label" for="again">
