--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -13,9 +13,12 @@
         <div class="t-rex running">
                 
         </div>
-        <div class="ground">
-            
-        </div>
+        <div class="layer layer-1"></div>
+        <div class="layer layer-2"></div>
+        <div class="layer layer-3"></div>
+        <div class="layer layer-4"></div>
+        <div class="layer-5"></div>
+
         <div class="score">
             0
         </div>
