--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -13,15 +13,17 @@
         <div class="t-rex running">
                 
         </div>
-        <div class="layer layer-1"></div>
+        <div class="ground layer layer-1"></div>
         <div class="layer layer-2"></div>
         <div class="layer layer-3"></div>
         <div class="layer layer-4"></div>
         <div class="layer-5"></div>
 
         <div class="score">
-            0
+            0000
         </div>
+
+        <div class="game-over">Game Over</div>
     </div>
 </body>
 </html>
