functionalities added and sound

--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -24,6 +24,7 @@
         </div>
 
         <div class="game-over">Game Over</div>
-    </div>
+       </div>
+       <audio src="soundTrack/moon-hydrogen-hotline-miami-soundtrack.mp3#t=00:01:00" ></audio>
 </body>
 </html>
