added score count and jump with keyframe

--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -20,7 +20,7 @@
         <div class="layer-5"></div>
 
         <div class="score">
-            0000
+            <span id="score-value">0000</span>
         </div>
 
         <div class="game-over">Game Over</div>
