--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -17,6 +17,8 @@
         <div class="layer layer-2"></div>
         <div class="layer layer-3"></div>
         <div class="layer layer-4"></div>
+        <div class="layer layer-6"></div>
+        <div class="layer layer-7"></div>
         <div class="layer-5"></div>
 
         <div class="score">
