--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -10,15 +10,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="t-rex running">
-                
-        </div>
+        <div class="t-rex"> </div>
         <div class="ground layer layer-1"></div>
         <div class="layer layer-2"></div>
         <div class="layer layer-3"></div>
         <div class="layer layer-4"></div>
         <div class="layer layer-6"></div>
-        <div class="layer layer-7"></div>
         <div class="layer-5"></div>
 
         <div class="score">
