--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -23,6 +23,7 @@
         </div>
 
         <div class="game-over">Game Over</div>
+        <div>NO </div>
        </div>
        <audio src="soundTrack/moon-hydrogen-hotline-miami-soundtrack.mp3#t=00:01:00"></audio>
 </body>
