--- a/Entregable3/index.html
+++ b/Entregable3/index.html
@@ -22,9 +22,16 @@
             <span id="score-value">0000</span>
         </div>
 
-        <div class="game-over">Game Over</div>
-        <div>NO </div>
-       </div>
-       <audio src="soundTrack/moon-hydrogen-hotline-miami-soundtrack.mp3#t=00:01:00"></audio>
+        <div class="short-message-container">
+            <p class="short-message" unselectable="on">Enter: Start</p>
+            <p class="short-message" unselectable="on">Spacebar: Jump</p>
+            <p class="short-message" unselectable="on">Spacebar + S: SuperDino</p>
+        </div>
+
+        <div id="game-over" class="message hidden">Game Over</div>
+        <div id="connection-lost" class="message">No internet connection</div>
+        
+    </div>
+    <audio src="soundTrack/moon-hydrogen-hotline-miami-soundtrack.mp3#t=00:01:00"></audio>
 </body>
 </html>
