new styles added

--- a/Entregable5/login.html
+++ b/Entregable5/login.html
@@ -17,8 +17,8 @@
             <img src="assets/logoVet.png" class="logo" alt="logo of the application">
         </div>
 
-        <button class="sign-in">SING IN</button>
-        <button class="sign-up">SING UP</button>
+        <button class="sign-in"><span class="button-text">SING IN</span></button>
+        <button class="sign-up"><span class="button-text">SING UP</span></button>
 
         <span class="home-message">Forgot Password</span>
 
