login screen finished

--- a/Entregable5/login.html
+++ b/Entregable5/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="loginStyles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;900&display=swap" rel="stylesheet">
     <title>Vet Connect</title>
 </head>
 <body>
@@ -16,9 +16,13 @@
         <div>
             <img src="assets/logoVet.png" class="logo" alt="logo of the application">
         </div>
+        <div>
+            <span class="login-title1">VET</span>
+            <span class="login-title2">CONNECT</span>
+        </div>
 
-        <button class="sign-in"><span class="button-text">SING IN</span></button>
-        <button class="sign-up"><span class="button-text">SING UP</span></button>
+        <button class="sign-in"><span class="button-text-si">SING IN</span></button>
+        <button class="sign-up"><span class="button-text-su">SING UP</span></button>
 
         <span class="home-message">Forgot Password</span>
 
