fix of language

--- a/Entregable5/login.html
+++ b/Entregable5/login.html
@@ -21,10 +21,10 @@
             <span class="login-title2">CONNECT</span>
         </div>
 
-        <button class="sign-in"><span class="button-text-si">SING IN</span></button>
-        <button class="sign-up"><span class="button-text-su">SING UP</span></button>
+        <button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button>
+        <button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button>
 
-        <span class="home-message">Forgot Password</span>
+        <span class="home-message">Olvide mi Clave</span>
 
         <div>
             <img src="assets/login.jpeg" class="home-photo" alt="Jack Russell dog looking at front">
