one to one screen finished

--- a/Entregable5/signUp.html
+++ b/Entregable5/signUp.html
@@ -14,7 +14,7 @@
     
     <div class="container">
         
-        <img id="back-image" src="chevron-left.png" alt="">
+        <img id="back-image" src="assets/chevron-left.png" alt="">
         <h1 id="title">Registrarse</h1>
 
         <div class="container-sign-in">    
