--- a/Entregable5/oneToOne.html
+++ b/Entregable5/oneToOne.html
@@ -12,21 +12,36 @@
 </head>
 <body>
     <div class="top-container">
-        <img id="back-image" src="chevron-left.png" alt="">
+        <img id="back-image" src="assets/chevron-left.png" alt="">
         <h2 id="title">Fernando</h2>
-        <img id="video-camera-image" src="video-camera.png" alt="">
+        <img id="video-camera-image" src="assets/video-camera.png" alt="">
     </div>
     <hr id="separator">
     <div class="left-chat-container">
         <img class="chat-image" src="assets/user.jpeg" alt="">
-        <p class="left-chat"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="left-chat"> Hola Fernando, como estás? Vi que compartiste una publicación acerca de remedios caseros para compartir garrapatas y te quería preguntar si habías probado alguno! </p>
     </div>
     <div class="right-chat-container">
-        <p class="right-chat"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="right-chat"> Buenas! Jajaa, sisi! Probé el que lleva gotas de limón y eneldo pero la verdad que no funcionó como lo esperaba :( </p>
         <img class="chat-image" src="assets/user.jpeg" alt="">
     </div>
     <div class="left-chat-container">
         <img class="chat-image" src="assets/user.jpeg" alt="">
-        <p class="left-chat"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="left-chat"> Ahh, está bien. Bueno yo voy a probar alguno de los otros y te aviso qué onda! </p>
     </div>
+
+    <footer>
+        <hr id="thin-separator">
+        <div class="chat-footer-container">
+            <img class="icon-image" src="assets/camera.png" alt="">
+            <img class="icon-image" src="assets/landscape.png" alt="">
+            <img class="icon-image" src="assets/mic.png" alt="">
+            <div class="input-container">
+                <input type="text" placeholder="Ingrese su mensaje...">
+                <hr id="input-base">    
+            </div>
+            <img class="icon-image" src="assets/send.png" alt="">
+        </div>
+    </footer>
+  
 </body>
