--- a/Entregable5/oneToOne.html
+++ b/Entregable5/oneToOne.html
@@ -18,15 +18,15 @@
     </div>
     <hr id="separator">
     <div class="left-chat-container">
-        <img class="chat-image" src="assets/user.jpeg" alt="">
+        <img class="chat-image" src="assets/user-b.jpg" alt="">
         <p class="left-chat"> Hola Fernando, como estás? Vi que compartiste una publicación acerca de remedios caseros para compartir garrapatas y te quería preguntar si habías probado alguno! </p>
     </div>
     <div class="right-chat-container">
         <p class="right-chat"> Buenas! Jajaa, sisi! Probé el que lleva gotas de limón y eneldo pero la verdad que no funcionó como lo esperaba :( </p>
-        <img class="chat-image" src="assets/user.jpeg" alt="">
+        <img class="chat-image" src="assets/user-a.jpg" alt="">
     </div>
     <div class="left-chat-container">
-        <img class="chat-image" src="assets/user.jpeg" alt="">
+        <img class="chat-image" src="assets/user-b.jpg" alt="">
         <p class="left-chat"> Ahh, está bien. Bueno yo voy a probar alguno de los otros y te aviso qué onda! </p>
     </div>
 
