code refactor + eyes added to password inputs

--- a/Entregable5/signUp.html
+++ b/Entregable5/signUp.html
@@ -20,15 +20,23 @@
         <div class="container-sign-in">    
             <div class="container-input">
                 <label class="label-input" for="">Usuario</label>
-                <input type="text">    
+                <div class="input-container">
+                    <input type="text">    
+                </div>
             </div>
             <div class="container-input">
                 <label class="label-input" for="">Contraseña</label>
-                <input type="password">
+                <div class="input-container">
+                    <input type="password">
+                    <img id="eye-icon" src="assets/eye.png" alt="">
+                </div>
             </div>
             <div class="container-input">
                 <label class="label-input" for="">Contraseña</label>
-                <input type="password">
+                <div class="input-container">
+                    <input type="password">
+                    <img id="eye-icon" src="assets/eye.png" alt="">
+                </div>
             </div>
             <p id="privacy-policy">Al registrarse, usted acepta los <u>Términos de Servicio</u> y la 
             <u>Política de Privacidad</u>.</p>
