--- a/Entregable5/signIn.html
+++ b/Entregable5/signIn.html
@@ -20,12 +20,16 @@
         <div class="container-sign-in">    
             <div class="container-input">
                 <label class="label-input" for="">Usuario</label>
-                <input type="text">    
+                <div class="input-container">
+                    <input type="text">
+                </div>
             </div>
             <div class="container-input">
                 <label class="label-input" for="">Contraseña</label>
-                <input type="password">
-
+                <div class="input-container">
+                    <input type="password">
+                    <img id="eye-icon" src="assets/eye.png" alt="">
+                </div>
             </div>
             <button class="sign-in"><span class="button-text">Iniciar sesión</span></button>
         </div>
