--- a/Entregable5/oneToOne.html
+++ b/Entregable5/oneToOne.html
@@ -13,7 +13,7 @@
 <body>
     <div class="top-container">
         <img id="back-image" src="assets/chevron-left.png" alt="">
-        <h2 id="title">Fernando</h2>
+        <h2 id="title">Milagros</h2>
         <img id="video-camera-image" src="assets/video-camera.png" alt="">
     </div>
     <hr id="separator">
