Search People Screen added

--- a/Entregable5/searchEmpty.html
+++ b/Entregable5/searchEmpty.html
@@ -18,7 +18,7 @@
             <input type="text" placeholder="Buscar">
         </div>
     </div>
-    <hr class="thin-separator">
+    <hr class="separator">
     <p class="subtitle">No hay búsquedas recientes</p>
     <h3 class="title">Buscar</h3>
     <div class="flex horizontal-container">
