dislike button implemented on sponsored posts

--- a/Entregable5/home.html
+++ b/Entregable5/home.html
@@ -143,7 +143,8 @@
                 <footer>
                     <div class="footer-container">
                         <img src="assets/like.png" alt="me gusta" id="footer-like"> 
-                            <span class="footer-text">Me gusta</span>
+                        <img src="assets/dislike.png" alt="me gusta" id="footer-dislike"> 
+                            <!-- <span class="footer-text">Me gusta</span> -->
                         
                        <img src="assets/comment.png" alt="comentar" id="footer-coment"> 
                             <span class="footer-text">Comentar</span>
