--- a/Entregable5/login.html
+++ b/Entregable5/login.html
@@ -11,8 +11,8 @@
     <title>Vet Connect</title>
 </head>
 <body>
-    
-    <div class="container-login">
+    <!---
+    <div class="container-login parallax-container">
         <div>
             <img src="assets/logoVet.png" class="logo" alt="logo of the application">
         </div>
@@ -26,9 +26,32 @@
 
         <span class="home-message">Olvide mi Clave</span>
 
-        <div>
+        <div id="dog">
             <img src="assets/login.jpeg" class="home-photo" alt="Jack Russell dog looking at front">
         </div>
+
+        <div class="foreground">
+            <p>ESTA ES LA MEJOR RED SOCIAL</p>
+        </div>
     </div>
+--->
+
+<div class="wrapper">
+  <div class="parallax-container">
+    <div class="background">
+      <img class="background__image" src="assets/logoVet.png" />
+    </div>
+    <div class="foreground">
+      <div class="foreground__content">
+        <img class="home-photo" src="assets/login.jpeg" />
+        <h1 id="message">La mejor red social de veterinarios del país.</h1>
+        <button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button>
+        <button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </body>
 </html>
