--- a/Entregable5/login.html
+++ b/Entregable5/login.html
@@ -24,7 +24,7 @@
         <button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button>
         <button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button>
 
-        <span class="home-message">Olvide mi Clave</span>
+        
 
         <div id="dog">
             <img src="assets/login.jpeg" class="home-photo" alt="Jack Russell dog looking at front">
@@ -41,12 +41,18 @@
     <div class="background">
       <img class="background__image" src="assets/logoVet.png" />
     </div>
+    <div>
+        <span class="login-title1">VET</span>
+        <span class="login-title2">CONNECT</span>
+    </div>
     <div class="foreground">
       <div class="foreground__content">
         <img class="home-photo" src="assets/login.jpeg" />
+        <img class="arrow" src="assets/down-arrow.png" alt="">
         <h1 id="message">La mejor red social de veterinarios del país.</h1>
         <button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button>
         <button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button>
+        <span class="home-message">Olvide mi Clave</span>
       </div>
     </div>
   </div>
