link to pages done

--- a/Entregable5/home.html
+++ b/Entregable5/home.html
@@ -19,8 +19,8 @@
                 <img class="chat-image" src="assets/user-b.jpg" alt="imagen de usuario">
                 <div class="status"></div>
                 <h2 class="header-title">Crear Post</h2>
-                <img src="assets/lupa.png" id="zoom" alt="logo de busqueda"></img>
-                <img src="assets/mensajero.png" id="conversations" alt="logo de mensajes"></img>
+                <a href="searchEmpty.html"><img src="assets/lupa.png" id="zoom" alt="logo de busqueda"></img></a>
+                <a href="chats.html"><img src="assets/mensajero.png" id="conversations" alt="logo de mensajes"></img></a>
     
             </div>
             
@@ -168,7 +168,7 @@
             <img src="assets/calendar.png" id="calendar" alt="calendario">
             <img src="assets/notifications.png" id="notifications" alt="notificaciones">
             <img src="assets/friends.png" id="friends" alt="amigos">
-            <img src="assets/user.png" id="profile" alt="perfil">
+            <a href="profile.html"><img src="assets/user.png" id="profile" alt="perfil"></a>
         </footer>
     </div>
 </body>
