--- a/Entregable5/login.html
+++ b/Entregable5/login.html
@@ -50,8 +50,8 @@
         <img class="home-photo" src="assets/login.jpeg" />
         <img class="arrow" src="assets/down-arrow.png" alt="">
         <h1 id="message">La mejor red social de veterinarios del país.</h1>
-        <button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button>
-        <button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button>
+        <a href="signIn.html"><button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button></a>
+        <a href="signUp.html"><button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button></a>
         <span class="home-message">Olvide mi Clave</span>
       </div>
     </div>
