--- a/Entregable5/oneToOne.html
+++ b/Entregable5/oneToOne.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <div class="top-container">
-        <img id="back-image" src="assets/chevron-left.png" alt="Volver">
-        <h2 id="title">Milagros</h2>
-        <img id="video-camera-image" src="assets/video-camera.png" alt="Videollamada">
+        <a href="chats.html"><img id="back-image" src="assets/chevron-left.png" alt="Volver"></a>
+        <h2 id="title">MILAGROS</h2>
+        <a href="videocall.html"><img id="video-camera-image" src="assets/video-camera.png" alt="Videollamada"></a>
     </div>
     <hr id="separator">
     <div class="left-chat-container">
