--- a/Entregable5/profile.html
+++ b/Entregable5/profile.html
@@ -113,7 +113,7 @@
     
     <hr class="separator sep-footer"></hr>
     <footer class="footer-page">
-        <img src="assets/home.png" id="home" alt="home">
+        <a href="home.html"><img src="assets/home.png" id="home" alt="home"></a>
         <img src="assets/calendar.png" id="calendar" alt="calendario">
         <img src="assets/notifications.png" id="notifications" alt="notificaciones">
         <img src="assets/friends.png" id="friends" alt="amigos">
