--- a/Entregable5/searchEmpty.html
+++ b/Entregable5/searchEmpty.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="flex">
-        <img id="back-image" src="assets/chevron-left.png" alt="">
+        <a href="home.html"><img id="back-image" src="assets/chevron-left.png" alt=""></a>
         <div class="container-input">
             <input type="text" placeholder="Buscar">
         </div>
@@ -21,10 +21,12 @@
     <hr class="separator">
     <p class="subtitle">No hay búsquedas recientes</p>
     <h3 class="title">Buscar</h3>
-    <div class="flex horizontal-container">
-        <img class="icon-image" src="assets/lupa.png" alt="">
-        <p>personas que quizás te interesen</p>
-    </div>
+    <a href="searchPeople.html">
+        <div class="flex horizontal-container">
+            <img class="icon-image" src="assets/lupa.png" alt="">
+            <p>personas que quizás te interesen</p>
+        </div>
+    </a>
     <div class="flex horizontal-container">
         <img class="icon-image" src="assets/lupa.png" alt="">
         <p>publicaciones de tus contactos</p>
