--- a/Entregable5/searchPeople.html
+++ b/Entregable5/searchPeople.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="flex">
-        <img id="back-image" src="assets/chevron-left.png" alt="">
+        <a href="searchEmpty.html"><img id="back-image" src="assets/chevron-left.png" alt=""></a>
         <div class="container-input">
             <input type="text" placeholder="personas que quizás te interesen">
         </div>
