--- a/Entregable5/signIn.html
+++ b/Entregable5/signIn.html
@@ -14,7 +14,7 @@
     
     <div class="container">
         
-        <img id="back-image" src="assets/chevron-left.png" alt="">
+        <a href="login.html"><img id="back-image" src="assets/chevron-left.png" alt=""></a>
         <h1 id="title">Iniciar sesión</h1>
 
         <div class="container-sign-in">    
@@ -31,7 +31,7 @@
                     <img id="eye-icon" src="assets/eye.png" alt="">
                 </div>
             </div>
-            <button class="sign-in"><span class="button-text">Iniciar sesión</span></button>
+            <a href="home.html"><button class="sign-in"><span class="button-text">Iniciar sesión</span></button></a>
         </div>
     </div>
 </body>
