--- a/Entregable5/signUp.html
+++ b/Entregable5/signUp.html
@@ -14,7 +14,7 @@
     
     <div class="container">
         
-        <img id="back-image" src="assets/chevron-left.png" alt="">
+        <a href="login.html"><img id="back-image" src="assets/chevron-left.png" alt=""></a>
         <h1 id="title">Registrarse</h1>
 
         <div class="container-sign-in">    
@@ -40,7 +40,7 @@
             </div>
             <p id="privacy-policy">Al registrarse, usted acepta los <u>Términos de Servicio</u> y la 
             <u>Política de Privacidad</u>.</p>
-            <button class="sign-in"><span class="button-text">Registrarse</span></button>
+            <a href="home.html"><button class="sign-in"><span class="button-text">Registrarse</span></button></a>
         </div>
     </div>
 </body>
