--- a/Entregable5/videocall.html
+++ b/Entregable5/videocall.html
@@ -16,7 +16,7 @@
     <img id="image-small" src="assets/videocall-small.jpg" alt="">
     <footer>
         <img class="footer-icon" src="assets/no-mic.png" alt="Mutear">
-        <img class="footer-icon" src="assets/no-telefonos.png" alt="Cortar llamada">
+        <a href="oneToOne.html"><img class="footer-icon" src="assets/no-telefonos.png" alt="Cortar llamada"> </a>
         <img class="footer-icon" src="assets/no-video.png" alt="Apagar la cámara">
     </footer>
 </body>
