--- a/Entregable5/home.html
+++ b/Entregable5/home.html
@@ -166,7 +166,7 @@
         <footer class="footer-page">
             <img src="assets/home.png" id="home" alt="home">
             <img src="assets/calendar.png" id="calendar" alt="calendario">
-            <img src="assets/notifications.png" id="notifications" alt="notificaciones">
+            <a href="notifications.html"><img src="assets/notifications.png" id="notifications" alt="notificaciones"></a>
             <img src="assets/friends.png" id="friends" alt="amigos">
             <a href="profile.html"><img src="assets/user.png" id="profile" alt="perfil"></a>
         </footer>
