added magnifier to search pages

--- a/Entregable5/searchPerson.html
+++ b/Entregable5/searchPerson.html
@@ -16,6 +16,7 @@
         <div class="container-input">
             <input type="text" value="marcel" placeholder="personas que quizás te interesen">
         </div>
+        <img class="search-icon" src="assets/lupa.png" alt="Buscar">
     </div>
     <div class="navbar">
         <span class="selected"><u>Personas</u></span> 
