mutiple fotos post implemented

--- a/Entregable5/notifications.html
+++ b/Entregable5/notifications.html
@@ -47,7 +47,7 @@
             <hr class="separator2"></hr>
             
             <div class="chat conv3">
-                <img src="assets/publicidad.jpg" class="chat-notif chat3" alt="">
+                <img src="assets/dogChow.png" class="chat-notif chat3" alt="">
                 <h2 class="name name3">DOGGIE DOG</h2>
                 <p class="text1 text3">Alguien a quien quizas conozcas esta en Vet Connect</p>
                 <p class="subtext3">1 dia atras</p>
