--- a/Entregable5/signUp.html
+++ b/Entregable5/signUp.html
@@ -40,7 +40,7 @@
             </div>
             <p id="privacy-policy">Al registrarse, usted acepta los <u>Términos de Servicio</u> y la 
             <u>Política de Privacidad</u>.</p>
-            <a href="home.html"><button class="sign-in"><span class="button-text">Registrarse</span></button></a>
+            <a href="loaderPage.html"><button class="sign-in"><span class="button-text">Registrarse</span></button></a>
         </div>
     </div>
 </body>
