--- a/Entregable5/loaderPage.html
+++ b/Entregable5/loaderPage.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <script src="loaderScript.js"></script>
     <title>Vet Connect</title>
 </head>
 <body>
