commit for pulling

--- a/Entregable5/home.html
+++ b/Entregable5/home.html
@@ -46,7 +46,7 @@
                         <div class="main-content">
                             <img   class="image-post"src="assets/labrador.jpg" alt="perro labrador">
                         </div>
-                        <div>
+                        <div class="feed">
                             <span class="like">13 Me gusta</span>
                             <span class="comments">3 Comentarios</span>
                             <span class="share">2 Compartidas</span>
