--- a/Entregable5/notifications.html
+++ b/Entregable5/notifications.html
@@ -17,7 +17,7 @@
         <header class="top-container">
             <div class="content">
                 <div class="chat-image" alt="imagen de usuario"></div>
-                <a href="home.html"><img id="back-image" src="assets/chevron-left.png" alt=""></a>
+                <a href="home.html"><img id="back-image" src="assets/chevron-left.png" alt="Volver"></a>
                 <h2 class="header-title">Actividad</h2>
                 <a href="searchEmpty.html"><img src="assets/lupa.png" id="zoom" alt="logo de busqueda"></img></a>
                 <a href="chats.html"><img src="assets/mensajero.png" id="conversations" alt="logo de mensajes"></img></a>
@@ -30,7 +30,7 @@
         <section class="body-container">
             <h1 class="title-hoy">Hoy</h1>
             <div class="chat conv1">
-                <img src="assets/user.jpg" class="chat-notif chat1" alt="">
+                <img src="assets/user.jpg" class="chat-notif chat1" alt="Avatar">
                 <h2 class="name">FERNANDA LOPEZ</h2>
                 <p class="text1">Comenzo a seguirte.</p>
                 <p class="subtext1">4 hs atras</p>
@@ -39,7 +39,7 @@
 
             <h1 class="title-ayer">Ayer</h1>
             <div class="chat conv2">
-                <img src="assets/user-a.jpg" class="chat-notif chat2" alt="">
+                <img src="assets/user-a.jpg" class="chat-notif chat2" alt="Avatar">
                 <h2 class="name name2">MARCELO CABRERA</h2>
                 <p class="text1 text2">Te menciono en un comentario: @Fernanda_Lopez esto te va gustar</p>
                 <p class="subtext2">1 dia atras</p>
@@ -47,7 +47,7 @@
             <hr class="separator2"></hr>
             
             <div class="chat conv3">
-                <img src="assets/dogChow.png" class="chat-notif chat3" alt="">
+                <img src="assets/dogChow.png" class="chat-notif chat3" alt="Avatar">
                 <h2 class="name name3">DOGGIE DOG</h2>
                 <p class="text1 text3">Alguien a quien quizas conozcas esta en Vet Connect</p>
                 <p class="subtext3">1 dia atras</p>
@@ -56,7 +56,7 @@
             <hr class="separator3"></hr>
             
             <div class="chat conv4">
-                <img src="assets/user-c.jpg" class="chat-notif chat4" alt="">
+                <img src="assets/user-c.jpg" class="chat-notif chat4" alt="Avatar">
                 <h2 class="name name4">FERNANDO JALUF</h2>
                 <p class="text1 text4">A Fernando Jaluf le gusto tu post.</p>
                 <p class="subtext4">1 dia atras</p>
