--- a/Entregable5/searchEmpty.html
+++ b/Entregable5/searchEmpty.html
@@ -17,7 +17,7 @@
         <div class="container-input">
             <input type="text" placeholder="Buscar">
         </div>
-        <img class="search-icon" src="assets/lupa.png" alt="Buscar">
+        <a href="searchPerson.html"><img class="search-icon" src="assets/lupa.png" alt="Buscar"></a>
     </div>
     <hr class="separator">
     <p class="subtitle">No hay búsquedas recientes</p>
