mobile development finished

--- a/Entregable5/home.html
+++ b/Entregable5/home.html
@@ -48,7 +48,7 @@
                         </div>
                         <div class="feed">
                             <span class="like">13 Me gusta</span>
-                            <span class="comments">3 Comentarios</span>
+                            <a href="comments.html"><span class="comments">3 Comentarios</span></a>
                             <span class="share">2 Compartidas</span>
                         </div>
                     </div>
