--- a/Entregable5/profile.html
+++ b/Entregable5/profile.html
@@ -116,7 +116,7 @@
     <footer class="footer-page">
         <a href="home.html"><img src="assets/home.png" id="home" alt="home"></a>
         <img src="assets/calendar.png" id="calendar" alt="calendario">
-        <img src="assets/notifications.png" id="notifications" alt="notificaciones">
+        <a href="notifications.html" ><img src="assets/notifications.png" id="notifications" alt="notificaciones"></a>
         <img src="assets/friends.png" id="friends" alt="amigos">
         <img src="assets/user.png" id="profile" alt="perfil">
     </footer>
