login folder was created for gh-pges

--- a/Entregable5/Login/login.html
+++ b/Entregable5/Login/login.html
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <div class="parallax-container">
       <div class="background">
-        <img class="background__image" src="assets/logoVet.png" />
+        <img class="background__image" src="../assets/logoVet.png" />
       </div>
       <div>
           <span class="login-title1">VET</span>
@@ -22,11 +22,11 @@
       </div>
       <div class="foreground">
         <div class="foreground__content">
-          <img class="home-photo" src="assets/login.jpeg" />
-          <img class="arrow" src="assets/down-arrow.png" alt="">
+          <img class="home-photo" src="../assets/login.jpeg" />
+          <img class="arrow" src="../assets/down-arrow.png" alt="">
           <h1 id="message">La mejor red social de veterinarios del país.</h1>
-          <a href="signIn.html"><button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button></a>
-          <a href="signUp.html"><button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button></a>
+          <a href="../signIn.html"><button class="sign-in"><span class="button-text-si">INICIAR SESION</span></button></a>
+          <a href="../signUp.html"><button class="sign-up"><span class="button-text-su">REGISTRARSE</span></button></a>
           <span class="home-message">Olvide mi Clave</span>
         </div>
       </div>
