--- a/Entregable5/settings.html
+++ b/Entregable5/settings.html
@@ -39,7 +39,7 @@
         </section>
         <section>
             
-            <a href="login.html"><p id="exit-account">Salir de la cuenta</p></a>
+            <a href="Login/index.html"><p id="exit-account">Salir de la cuenta</p></a>
         </section>
     </article>
 </body>
