--- a/Entregable5/signUp.html
+++ b/Entregable5/signUp.html
@@ -14,7 +14,7 @@
     
     <div class="container">
         
-        <a href="login.html"><img id="back-image" src="assets/chevron-left.png" alt=""></a>
+        <a href="Login/index.html"><img id="back-image" src="assets/chevron-left.png" alt=""></a>
         <h1 id="title">Registrarse</h1>
 
         <div class="container-sign-in">    
